title.css
:root{
    overflow-y: hidden;
    overscroll-behavior-y: none;
}
#doccolor{
    border-radius: 50%;
    border: none;
    outline: none;
    padding: 0px;
    height: 24px;
    width: 24px;
    -webkit-appearance: none;
}
#doccolor::-webkit-color-swatch-wrapper {
    padding: 0; 
    -webkit-appearance: none;
}
#doccolor::-webkit-color-swatch {
    border: none;
    border-radius: 50%;
    -webkit-appearance: none;
}
#tDelete, #tNoteColor{
    align-self: flex-end;
}
#page{
    margin: 8px;
    margin-top: 0px;
    overflow-y: scroll;
    height: calc(100% - 70px);
}
hr{
    margin: 8px !important;
}
#tools{
    display: flex;
    align-content: flex-end;
    gap: 8px;
    padding: 8px;
    padding-left: 0px;
    background-color: white;
}
#toolbar{
    position: relative;
    display: flex;
    z-index: 1;
    width: -webkit-fill-available;
}
.notelist-item{
    display: flex;
    align-items: center;
    justify-content: flex-start;
    font-size: 20px;
    height: 36px;
}
.shelf-option{
    align-self: center;
    height: inherit;
}
.shelf-name{
    flex-grow: 1;
}
#header{
    display: flex;
    gap: 8px;
    width: 100%;
    padding: 8px;
    align-items: center;
    background-color: white;
    z-index: 1;
}
#shelflist{
    width: -webkit-fill-available;
    color: #000000;
    height: 30px;
    max-width: 50%;
    outline: none;
    display: none;
}
#tShelfList .dropdown-item{
    display: inline-block;
    width: auto;
}
#tShelfListOuter, #tShelfList{
    width: -webkit-fill-available;
    font-size: 20px;
}
#logo{
    height: 44px;
    border-radius: 6px;
}
#shelflist:disabled{
    color: #999999;
}
#docheader{
    display: flex;
    gap: 8px;
}
#docname{
    font-size: 30px;
    height: 60px;
    font-weight: 500;
    outline: none;
}
#doc{
    outline: none;
    width: 100%;
    height: 70%;
    margin-top: 8px;
}
#list p{
    font-size: 24px;
}
input{
    margin-bottom: 5px;
}
dialog{
    border: solid 1px black;
    border-radius: 6px;
}
.toolbutton{
	font-size: 24px;
    height: 44px;
}
.toolbutton i{
    font-size: 24px;
}
.notecard{
    max-height: 250px; 
    width: auto;
    margin-inline: 15%;
    margin-bottom: 8px;
    cursor: pointer;
    user-select: none;
    --bs-card-border-color: black !important;
}

.card-text{
    white-space: nowrap; 
    overflow: hidden; 
    text-overflow: ellipsis;
}

body[activeview="edit"] #list, 
body[activeview="edit"] #tNewShelf, 
body[activeview="edit"] #tNewNote, 
body[activeview="edit"] #tShelfList{
    display: none;
}

body[activeview="edit"] #tDelete, 
body[activeview="edit"] #tClose, 
body[activeview="edit"] #editor,
body[activeview="edit"] #tNoteColor {
    display: block;
}

body[activeview="edit"] #header{
    width: auto;
}

body[activeview="list"] #list, 
body[activeview="list"] #tNewShelf, 
body[activeview="list"] #tNewNote, 
body[activeview="list"] #tShelfList{
    display: block;
}

body[activeview="list"] #tClose, 
body[activeview="list"] #tDelete, 
body[activeview="list"] #editor,
body[activeview="list"] #tNoteColor {
    display: none;
}

body[activeview="list"] #header{
    width: 100%;
}







@media screen and (max-width: 600px){
    #toolbar{
        flex-wrap: wrap;
        position: relative;
        top:auto;
        left:auto;
    }
    #tools{
        width: -webkit-fill-available;
        display: flex;
        justify-content: space-evenly;
        position: fixed;
        padding: 8px;
        bottom: 20px;
        left: 0px;
        z-index: 1;
        background-color: white;
    }
    #tRenameShelf, #tDeleteShelf{
        font-size: 20px;
    }
    p, #doc, #shelflist, dialog input, dialog button {
        font-size: 20px;
    }
    #tNewNote, #tClose, #tDelete, #tNoteColor{
        width: -webkit-fill-available;
    }
    #tShelfListOuter, #tShelfList{
        width: -webkit-fill-available;
        max-width: 100% !important;
    }
    #list a{
        font-size: 22px;
    }
    #page{
        height: calc(100% - 144px);
    }
    .notecard{
        width: 100%;
        margin-inline: 0px;
    }

}	

